fix: overlapping li on navbar hover

--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@ nav li li li {
 }
 
 nav {
-  display: inline-flex;
+  display: inline-block;
   justify-content: center;
-  align-items: center;
   text-align: center;
   margin: 0px auto;
 }
@@ -31,7 +30,7 @@ nav a {
 nav li {
   list-style: none;
   position: relative;
-  display: inline-flex;
+  display: inline-block;
 }
 
 nav a {
